# zomato-sentiment-analysis

./: README.md  main.py  pyproject.toml  zomato_reviews.csv
